--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-error-boundary": "^3.1.1",
     "react-icons": "^4.2.0",
     "react-player": "^2.9.0",
+    "styled-components": "^5.3.0",
     "swr": "^0.5.6",
     "web3": "^1.3.6",
     "zustand": "^3.4.2"
