--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.3.0",
     "@mailchimp/mailchimp_marketing": "^3.0.41",
     "@metamask/onboarding": "^1.0.0",
+    "@portis/web3": "^4.0.4",
     "@web3-react/core": "^6.1.9",
     "@web3-react/injected-connector": "^6.0.7",
     "@web3-react/walletconnect-connector": "^6.2.0",
@@ -36,6 +37,7 @@
     "styled-components": "^5.3.0",
     "swr": "^0.5.6",
     "web3": "^1.3.6",
+    "web3modal": "^1.9.3",
     "zustand": "^3.4.2"
   },
   "devDependencies": {
